# web-static-python

./: README.md  pyproject.toml
scripts/: start.py
