[tool.poetry]
name = "static-python-template"
version = "0.1.0"
description = ""
authors = ["arthurwinck <apwinck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.2"
fastapi = {extras = ["standard"], version = "^0.115.0"}

[tool.poetry.scripts]
start = "scripts.start:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
ignore_missing_imports = false
